# IrishCensusMapping

./: .gitignore  Cargo.toml  README.md  config.toml  index.html
src/: config.rs  data.rs  main.rs  masking.rs  processing.rs  render.rs  server.rs  types.rs
