[package]
name = "dot-density-map"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
geo = "0.28"
image = "0.24"
rand = "0.8"
rayon = "1.8"
rstar = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shapefile = { version = "0.6", features = ["geo-types"] }
geojson = { version = "0.24", features = ["geo-types"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
